@@ -1,4 +1,4 @@
-.\" RCSid $Id: dctimestep.1,v 1.9 2014/05/30 00:00:54 greg Exp $"
+.\" RCSid $Id: dctimestep.1,v 1.10 2014/09/17 22:40:49 greg Exp $"
 .TH DCTIMESTEP 1 12/09/09 RADIANCE
 .SH NAME
 dctimestep - compute annual simulation time-step(s) via matrix multiplication
@@ -7,9 +7,11 @@ dctimestep - compute annual simulation time-step(s) via matrix multiplication
 [
 .B "\-n nsteps"
 ][
+.B "\-h"
+][
 .B "\-o ospec"
 ][
-.B "\-i{f|d|h}
+.B "\-i{f|d}
 ][
 .B "\-o{f|d}
 ]
@@ -22,9 +24,11 @@ dctimestep - compute annual simulation time-step(s) via matrix multiplication
 [
 .B "\-n nsteps"
 ][
+.B "\-h"
+][
 .B "\-o ospec"
 ][
-.B "\-i{f|d|h}
+.B "\-i{f|d}
 ][
 .B "\-o{f|d}
 ]
@@ -73,16 +77,24 @@ and may be passed on the standard input.
 This data is assumed by default to be in ASCII format, whereas the
 formats of the View and Daylight matrices
 are detected automatically if given as binary data.
+.PP
+If the input sky data lacks a header, the
+.I \-n
+option may be used to indicate the number of time steps, which
+will be 1 for a sky vector.
+The sky input file must contain the number of
+columns specified in each sky patch row, whether it is read
+from the standard input or from a file.
+Input starts from the first patch at the first time step, then the
+first patch at the second time step, and so on.
 The
 .I \-if
 or
 .I \-id
 option may be used to specify that sky data is in float or double
 format, respectively, which is more efficient for large matrices.
-The
-.I \-ih
-option says to check the header to determine the data type.
-(Note that binary double data may not be read from stdin without a header.)\0
+These options are unnecessary in the when the sky
+input has a header.
 .PP
 The standard output of
 .I dctimestep
@@ -100,21 +112,6 @@ component pictures, which will be summed according to the computed
 vector.
 .PP
 The
-.I \-n
-option may be used to compute multiple time steps in a
-single invocation.
-The sky input file must contain the number of
-columns specified in each sky patch row, whether it is read
-from the standard input or from a file.
-The columns do not need to be given on the same
-line, so long as the number of values totals 3*Nsteps*Npatches.
-Input starts from the first patch at the first time step, then the
-first patch at the second time step, and so on.
-If the input matrix has a header, then you may use
-.I \-n 0
-to get the number of columns from the header rather than specifying it.
-.PP
-The
 .I \-o
 option may be used to specify a file or a set of output files
 to use rather than the standard output.
@@ -122,24 +119,16 @@ If the given specification contains a '%d' format string, this
 will be replaced by the time step index, starting from 1.
 In this way, multiple output pictures may be produced,
 or separate result vectors (one per time step).
-If the standard output is used or the
-.I \-o
-option specifies a single output file, then an information header
-will precede the output.
-This can be removed if desired using the
-.I getinfo\(1\)
-command with a single hyphen ('-') argument.
 .PP
+A header will normally be produced on the output, unless the
+.I \-h
+option is specified.
 The
 .I \-of
 or
 .I \-od
 option may be used to specify IEEE float or double binary output
 data, respectively.
-This enables
-.I dctimestep
-to be used as a pure matrix multiplier, as the output file with
-header specifying the format is suitable for subsequent calls.
 .SH EXAMPLES
 To compute workplane illuminances at 3:30pm on Feb 10th:
 .IP "" .2i
@@ -162,21 +151,20 @@ Window2.dmx > view_6-21-12.hdr
 To generate an hourly matrix of sensor value contributions from Skylight3
 using a 3-phase calculation, where output columns are time steps:
 .IP "" .2i
-gendaymtx -of Tampa.wea | dctimestep -if -n 8760 WPpts.vmx
+gendaymtx -of Tampa.wea | dctimestep WPpts.vmx
 shade3.xml Skylight3.dmx > wp_win3.dat
 .IP "" .2i
 .PP
 Generate a series of pictures corresponding to timesteps
 in an annual simulation:
 .IP "" .2i
-gendaymtx NYCity.wea | dctimestep -n 8760 -o tstep%04d.hdr dcomp%03d.hdr
+gendaymtx NYCity.wea | dctimestep -o tstep%04d.hdr dcomp%03d.hdr
 .PP
-To multiply two color matrices (second matrix is IEEE-float with
-145 RGB columns) into a IEEE-double result (also 145 RGB columns):
+To multiply two matrices into a IEEE-float result with header:
 .IP "" .2i
-getinfo - < Inp2.fmx | dctimestep -n 145 -if -od Inp1.fmx > Inp1xInp2.dmx
+dctimestep -of Inp1.fmx Inp2.fmx > Inp1xInp2.fmx
 .SH AUTHOR
 Greg Ward
 .SH "SEE ALSO"
 gendaymtx(1), genklemsamp(1), genskyvec(1), getinfo(1),
-mkillum(1), rcollate(1), rcontrib(1), rtrace(1), vwrays(1)
+mkillum(1), rcollate(1), rcontrib(1), rmtxop(1), rtrace(1), vwrays(1)
